--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<div class="main-container">
 			<div id="overlay" class="start">
-				<h2 class="title">Bollywood guess</h2>
+				<h2 class="title">Phrase Hunter</h2>
 				<h1 id="game-over-message"></h1>
 				<button id="btn__reset">Start Game</button>
 			</div>
@@ -75,7 +75,7 @@
 
 	</body>
 	
-	<script src="data/data.js"></script> 
+	<script src="data/data.js"></script>
 	<script type="text/javascript" src="js/Phrase.js"></script>
 	<script type="text/javascript" src="js/Game.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
